syntax = "proto3";

package analysis.dvvp.msprof.proto;


message Header {
    string Magic = 1;
    string job_ctx = 2;
}

// for transfer data and flush to file
message FileChunkReq {
    Header Hdr = 1;
    string FileName = 2;
    int64 Offset = 3;
    bytes Chunk = 4;
    int32 ChunkSizeInBytes = 5;
    bool IsLastChunk = 6;
    bool NeedAck = 7;
    string Tag = 8;
    string TagSuffix = 9;
    uint64 ChunkStartTime = 10;
    uint64 ChunkEndTime = 11;
    int32 DataModule = 12;
}

message FileChunkFlushReq {
    Header Hdr = 1;
    string FileName = 2;
    int32 DataModule = 3;
}

message JobCtx {
    bool stream_enabled = 1;
    string result_dir = 1;
    string format = 2; //json, binary
}
message ModuleConfig {
    map<string, string> switches = 1;
}
message ProfilerJobConfig {
    JobCtx job_ctx = 1;
    map<string, ModuleConfig> modules = 2;
}

message ProfilerEvents {
    string ai_core_events = 1;
    string L2_cache_events = 2;
};

message ProfilerConf {
    string aicoreMetrics = 1;
    uint32 aicoreSamplingInterval = 2;
    uint32 cpuSamplingInterval = 3;
    uint32 sysSamplingInterval = 4;
    uint32 appSamplingInterval = 5;
    uint32 hardwareMemSamplingInterval = 6;
    uint32 ioSamplingInterval = 7;
    uint32 interconnectionSamplingInterval = 8;
    uint32 dvppSamplingInterval = 9;
    repeated ProfilerEvents events = 10;
    string aivMetrics = 11;
    uint32 aivSamplingInterval = 12;
    string l2 = 13;
}

message ProfilerFeature {
    string name = 1;
    repeated ProfilerConf conf = 2;
}

message ProfilerFeatureCtx {
    string jobID = 1;
    string traceId = 2;
    string resultPath = 3;
    repeated string deviceID = 4;   // ["all"] or ["0", "1"]
    repeated ProfilerFeature features= 5;
}

message ProfilerFeatureConfig {
    repeated ProfilerFeatureCtx startCfg= 1;
}

message MsProfStartReq {
    string job_id = 1;      // trace id produced by libmsprof
    string ts_fw_training = 2;
    string task_base = 3;
    string hwts_log = 4;
    string ts_timeline = 5;
    string ts_task_track = 6;
    string docker_id = 7;
    string job_info = 8;   // job id send by GE
    string feature_name = 9;
    string ai_core_events = 10;
    string l2_cache_events = 11;
    string traceId = 12;
    string result_path = 13;
    string op_trace_conf = 14;
    string system_trace_conf = 15;
    string task_trace_conf = 16;
}