/*
 * Copyright (c) Huawei Technologies Co., Ltd. 2021-2021. All rights reserved.
 * Description: file ageing
 * Author: Huawei Technologies Co., Ltd.
 * Create: 2021-08-15
 */
#include "file_ageing.h"
#include <cstdio>
#include <cstring>
#include <sys/stat.h>
#include <sys/types.h>
#include "config/config.h"
#include "config/config_manager.h"
#include "msprof_dlog.h"
#include "proto/profiler.pb.h"
#include "utils/utils.h"

namespace analysis {
namespace dvvp {
namespace transport {
using namespace analysis::dvvp::common::error;
using namespace analysis::dvvp::common::config;
using namespace analysis::dvvp::common::utils;
using namespace Analysis::Dvvp::Common::Config;
constexpr uint32_t MOVE_BIT = 20;
constexpr uint64_t STORAGE_RESERVED_VOLUME = (STORAGE_LIMIT_DOWN_THD / 10) << MOVE_BIT;

FileAgeing::FileAgeing(const std::string &storageDir, const std::string &storageLimit)
    : inited_(false), overThdSize_(0), storagedFileSize_(0), storageVolumeUpThd_(0),
      storageVolumeDownThd_(0), storageDir_(storageDir), storageLimit_(storageLimit)
{
}

FileAgeing::~FileAgeing()
{
}

int FileAgeing::Init()
{
    if (ConfigManager::instance()->GetPlatformType() == PlatformType::MINI_TYPE) {
        MSPROF_LOGI("platform type is MINI_TYPE, not start file ageing");
        return PROFILING_SUCCESS;
    }

    unsigned long long totalVolume = 0;
    if (Utils::GetTotalVolume(storageDir_, totalVolume) == PROFILING_FAILED) {
        MSPROF_LOGE("GetTotalVolume failed, storageDir_:%s, storage_limit:%s",
                    Utils::BaseName(storageDir_).c_str(), storageLimit_.c_str());
        return PROFILING_FAILED;
    }
    uint64_t limit = GetStorageLimit();
    limit = (limit < totalVolume) ? limit : totalVolume;
    if (limit == 0) {
        MSPROF_LOGI("limit is 0, not start file ageing, storage_limit:%s, totalVolume:%llu",
                    Utils::BaseName(storageLimit_).c_str(), totalVolume);
        return PROFILING_SUCCESS;
    }
    storageVolumeUpThd_ = limit - STORAGE_RESERVED_VOLUME;
    storageVolumeDownThd_ = STORAGE_RESERVED_VOLUME;
    MSPROF_LOGI("init storage_limit success, limit:%llu (%lluMB), storageVolumeUpThd_:%llu (%lluMB), "
                "storageVolumeDownThd_:%llu (%lluMB)",
                limit, (limit >> MOVE_BIT),
                storageVolumeUpThd_, (storageVolumeUpThd_ >> MOVE_BIT),
                storageVolumeDownThd_, (storageVolumeDownThd_ >> MOVE_BIT));

    overThdSize_ = 0;
    storagedFileSize_ = 0;
    unPairCount_[HWTS_DATA] = 0;
    unPairCount_[AICORE_DATA] = 0;
    noAgeingFile_ = {std::string("model_load_info"), std::string("task_desc_info"), std::string("id_map_info"),
                     std::string("fusion_op_info"), std::string("tensor_data_info"),
                     std::string("ts_track"), std::string("training_trace"), std::string("info.json"),
                     std::string("hash_dic"), std::string("start_info"), std::string("end_info"),
                     std::string("host_start"), std::string("dev_start"), std::string("sample.json")};
    inited_ = true;
    return PROFILING_SUCCESS;
}

uint64_t FileAgeing::GetStorageLimit() const
{
    if (storageLimit_.empty()) {
        return 0;
    }
    size_t strLen = storageLimit_.size();
    if (strLen <= strlen(STORAGE_LIMIT_UNIT)) {
        return 0;
    }
    std::string digitStr = storageLimit_.substr(0, strLen - strlen(STORAGE_LIMIT_UNIT));
    uint64_t limit = stoull(digitStr);
    return (limit << MOVE_BIT);
}

bool FileAgeing::IsNeedAgeingFile()
{
    if (!inited_) {
        return false;
    }

    if (storagedFileSize_ > storageVolumeUpThd_) {
        overThdSize_ = storagedFileSize_ - storageVolumeUpThd_;
        MSPROF_LOGD("storagedFileSize_:%llu, storageVolumeUpThd_:%llu, overThdSize_:%llu",
                    storagedFileSize_, storageVolumeUpThd_, overThdSize_);
        return true;
    }

    unsigned long long dirFreeSize = 0;
    if (Utils::GetFreeVolume(storageDir_, dirFreeSize) == PROFILING_FAILED) {
        MSPROF_LOGE("GetFreeVolume failed");
        return false;
    }
    if (dirFreeSize < storageVolumeDownThd_) {
        overThdSize_ = storageVolumeDownThd_ - dirFreeSize;
        MSPROF_LOGD("storageVolumeUpThd_:%llu, storageVolumeDownThd_:%llu, dirFreeSize:%llu, overThdSize_:%llu",
                    storageVolumeUpThd_, storageVolumeDownThd_, dirFreeSize, overThdSize_);
        return true;
    }
    return false;
}

bool FileAgeing::IsNoAgeingFile(const std::string &fileName) const
{
    for (auto iter = noAgeingFile_.begin(); iter != noAgeingFile_.end(); ++iter) {
        if (fileName.find(*iter) != std::string::npos) {
            return true;
        }
    }
    return false;
}

int32_t FileAgeing::CutSliceNum(const std::string &fileName, std::string &cutFileName) const
{
    std::string::size_type pos = fileName.find_last_of('.');
    if (pos == std::string::npos) {
        MSPROF_LOGE("fileName:%s invalid", Utils::BaseName(fileName).c_str());
        return PROFILING_FAILED;
    }
    cutFileName = fileName.substr(0, pos);
    return PROFILING_SUCCESS;
}

void FileAgeing::PairInsertList(const std::string &pairedFileTag, ToBeAgedFile &insertedFile)
{
    uint32_t  rInd = 0;
    uint32_t  insertPos = 0;

    if (unPairCount_[pairedFileTag] > 0) {
        for (auto iter = ageingFileList_.begin(); iter != ageingFileList_.end(); ++iter) {
            if (!iter->isValid) {
                *iter = insertedFile;
                iter->isNeedPair = true;
                iter->isPaired = true;
                unPairCount_[pairedFileTag] -= 1;
                return;
            }
        }
        MSPROF_LOGE("not find ToBeAgedFile struct, unPairCount_[%s]:%u",
                    pairedFileTag.c_str(), unPairCount_[pairedFileTag]);
        PrintAgeingFile();
    }

    for (auto rIter = ageingFileList_.rbegin(); rIter != ageingFileList_.rend(); ++rIter, ++rInd) {
        if (rIter->fileName.find(pairedFileTag) != std::string::npos) {
            if (!rIter->isPaired) {
                insertPos = ageingFileList_.size() - rInd;
            } else {
                break;
            }
        }
    }
    if (insertPos == 0) {
        ageingFileList_.push_back(insertedFile);
    } else {
        auto iter = begin(ageingFileList_);
        advance(iter, insertPos - 1);
        iter->isPaired = true;
        insertedFile.isPaired = true;
        ++iter;
        ageingFileList_.insert(iter, insertedFile);
    }
}

void FileAgeing::AppendAgeingFile(const std::string &filePath, const std::string &doneFilePath,
                                  uint64_t fileSize, uint64_t doneFileSize)
{
    if (!inited_) {
        return;
    }

    MSPROF_LOGD("Try append ageing file. filePath:%s doneFilePath:%s",
                Utils::BaseName(filePath).c_str(), Utils::BaseName(doneFilePath).c_str());
    constexpr uint64_t maxStoragedFileSize = static_cast<uint64_t>(1) << 50; // (2^50)Byte = 1024T
    if (storagedFileSize_ >= maxStoragedFileSize) {
        MSPROF_LOGE("storagedFileSize_:%llu is over normal range", storagedFileSize_);
        return;
    }
    if (filePath.empty() || doneFilePath.empty()) {
        MSPROF_LOGE("filePath:%s, doneFilePath:%s, file path invalid",
                    Utils::BaseName(filePath).c_str(), Utils::BaseName(doneFilePath).c_str());
        return;
    }

    std::string fileName = Utils::BaseName(filePath);
    std::string doneFileName = Utils::BaseName(doneFilePath);
    if (IsNoAgeingFile(fileName)) {
        storagedFileSize_ += fileSize + doneFileSize;
        MSPROF_LOGD("%s can not be ageing", Utils::BaseName(filePath).c_str());
        return;
    }

    std::string cutSliceNumName;
    if (CutSliceNum(fileName, cutSliceNumName) == PROFILING_FAILED) {
        MSPROF_LOGE("CutSliceNum failed, fileName:%s", Utils::BaseName(fileName).c_str());
        return;
    }
    ToBeAgedFile file = {true, false, false, fileSize, doneFileSize, fileName, doneFileName,
                         filePath, doneFilePath, cutSliceNumName, ""};

    auto iter = fileCount_.find(cutSliceNumName);
    if (iter == fileCount_.end()) {
        fileCount_[cutSliceNumName] = 1;
    } else {
        fileCount_[cutSliceNumName] += 1;
    }

    if (fileName.find(AICORE_DATA) != std::string::npos) {
        file.isNeedPair = true;
        file.pairFileTag = AICORE_DATA;
        PairInsertList(HWTS_DATA, file);
    } else if (fileName.find(HWTS_DATA) != std::string::npos) {
        file.isNeedPair = true;
        file.pairFileTag = HWTS_DATA;
        PairInsertList(AICORE_DATA, file);
    } else {
        ageingFileList_.push_back(file);
    }
    storagedFileSize_ += fileSize + doneFileSize;
}

bool FileAgeing::IsLastFile(const std::string &fileCountTag)
{
    if (fileCount_.find(fileCountTag) == fileCount_.end()) {
        MSPROF_LOGE("file:%s not find in fileCount_", fileCountTag.c_str());
        return true;
    }
    if (fileCount_[fileCountTag] <= 1) {
        MSPROF_LOGD("file:%s is last file", fileCountTag.c_str());
        return true;
    }
    return false;
}

void FileAgeing::RemoveFile(const ToBeAgedFile &file, uint64_t &removeFileSize)
{
    if (remove(file.filePath.c_str()) != EOK) {
        MSPROF_LOGE("remove file:%s failed", Utils::BaseName(file.filePath).c_str());
    } else {
        removeFileSize += file.fileSize;
    }
    if (remove(file.doneFilePath.c_str()) != EOK) {
        MSPROF_LOGE("remove file:%s failed", Utils::BaseName(file.doneFilePath).c_str());
    } else {
        removeFileSize += file.doneFizeSize;
    }
    fileCount_[file.fileCountTag] -= 1;
    MSPROF_LOGD("remove fileName:%s, filePath:%s, fileCount_[%s]:%u",
                file.fileName.c_str(), Utils::BaseName(file.filePath).c_str(),
                file.fileCountTag.c_str(), fileCount_[file.fileCountTag]);
}

void FileAgeing::RemoveAgeingFile()
{
    uint64_t removeFileSize = 0;

    MSPROF_LOGD("RemoveAgeingFile begin, storagedFileSize:%llu overThdSize:%llu, ageingFileList.size:%u",
                storagedFileSize_, overThdSize_, ageingFileList_.size());
    for (auto iter = ageingFileList_.begin(); iter != ageingFileList_.end();) {
        if (!iter->isValid || IsLastFile(iter->fileCountTag)) {
            ++iter;
            continue;
        }

        RemoveFile(*iter, removeFileSize);
        if (iter->isNeedPair && !iter->isPaired) {
            unPairCount_[iter->pairFileTag] += 1;
            iter->isValid = false;
            ++iter;
        } else {
            iter = ageingFileList_.erase(iter);
        }

        if (removeFileSize >= overThdSize_) {
            if (removeFileSize > storagedFileSize_) {
                MSPROF_LOGE("removeFileSize error, removeFileSize:%llu, storagedFileSize_:%llu",
                            removeFileSize, storagedFileSize_);
                PrintAgeingFile();
                storagedFileSize_ = 0;
            } else {
                storagedFileSize_ -= removeFileSize;
            }
            overThdSize_ = 0;
            break;
        }
    }
    MSPROF_LOGD("RemoveAgeingFile end, storagedFileSize:%llu overThdSize:%llu, "
                "ageingFileList.size:%u, removeFileSize:%llu",
                storagedFileSize_, overThdSize_, ageingFileList_.size(), removeFileSize);
}

void FileAgeing::PrintAgeingFile() const
{
    MSPROF_LOGD("print ageing file list: ");
    for (auto iter = ageingFileList_.begin(); iter != ageingFileList_.end(); ++iter) {
        MSPROF_LOGD("isValid:%u, isNeedPair:%u, isPaired:%u, filePath:%s, fileSize:%llu",
                    iter->isValid, iter->isNeedPair, iter->isPaired,
                    Utils::BaseName(iter->filePath).c_str(), iter->fileSize);
    }
}
}
}
}
